---
config:
  theme: neo
---
erDiagram
  direction LR
  LICENSE      ||--o{ RACE         : issues
  DIRECTOR     ||--o{ RACE         : directs
  SPONSOR      ||--o{ RACE         : sponsors
  RACE         ||--o{ PARTICIPANT  : has
  RACER        ||--o{ PARTICIPANT  : participates_in
  LICENSE {
    INT       lic_no PK
    TEXT      city
    DATETIME  date
    VARCHAR   issuer
    DECIMAL   cost
    VARCHAR   dept
    VARCHAR   contact
  }
  DIRECTOR {
    VARCHAR   name PK
    VARCHAR   phone_no
    VARCHAR   address
  }
  SPONSOR {
    VARCHAR   name PK
    VARCHAR   contact
  }
  RACE {
    INT       r_no PK
    INT       lic_no FK
    VARCHAR   dir_name FK
    VARCHAR   Mal_Win
    VARCHAR   FEM_Win
    VARCHAR   sp_name FK
  }
  RACER {
    VARCHAR   name PK
    VARCHAR   address PK
    VARCHAR   mem_num
  }
  PARTICIPANT {
    VARCHAR   racer_name FK
    VARCHAR   racer_address FK
    INT       race_no FK
  }
  SHOES        ||--o{ MAKES        : produced_by
  MANUFACTURER ||--o{ MAKES        : manufactures
  SHOES        ||--o{ SELLS        : sold_by
  DISTRIBUTOR  ||--o{ SELLS        : sells
  DISTRIBUTOR  ||--o{ CONTRACT     : contracts_with
  MANUFACTURER ||--o{ CONTRACT     : contracts_to
  DISTRIBUTOR  ||--o{ EMPLOYS      : employs
  SALESPERSON  ||--o{ EMPLOYS      : works_for
  SHOES {
    VARCHAR   model PK
    INT       size  PK
  }
  MANUFACTURER {
    VARCHAR   name PK
    VARCHAR   address
  }
  DISTRIBUTOR {
    VARCHAR   name    PK
    VARCHAR   address PK
    VARCHAR   sin
  }
  SALESPERSON {
    VARCHAR   sin PK
    VARCHAR   name
    DECIMAL   commission
  }
  MAKES {
    VARCHAR   model FK
    INT       size  FK
    VARCHAR   m_name FK
    DECIMAL   prod_cost
  }
  SELLS {
    VARCHAR   model  FK
    INT       size   FK
    VARCHAR   d_name FK
    VARCHAR   d_addr FK
    DECIMAL   cost
  }
  CONTRACT {
    VARCHAR   d_name FK
    VARCHAR   d_addr FK
    VARCHAR   m_name FK
    DECIMAL   cost
  }
  EMPLOYS {
    VARCHAR   d_name      FK
    VARCHAR   d_addr      FK
    VARCHAR   sp_sin      FK
    DECIMAL   base_salary
  }
